--- a/SnakeFX/src/application/SnakeFxView.fxml
+++ b/SnakeFX/src/application/SnakeFxView.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="mainAnchorPane" fx:id="mainAnchorPane" prefHeight="430.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SnakeFxController">
    <children>
       <Button id="btnNewGame" fx:id="btnNewGame" layoutX="78.0" layoutY="195.0" mnemonicParsing="false" onAction="#btnNewGame" text="New game" />
-      <TextArea id="textAreaScore" fx:id="textAreaScore" layoutX="206.0" layoutY="141.0" prefHeight="178.0" prefWidth="200.0" />
-      <Label layoutX="209.0" layoutY="115.0" text="Score:" />
+      <TextArea id="textArea" fx:id="textArea" layoutX="209.0" layoutY="108.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
