--- a/SnakeFX/src/application/SnakeFxView.fxml
+++ b/SnakeFX/src/application/SnakeFxView.fxml
@@ -4,9 +4,12 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="mainAnchorPane" fx:id="mainAnchorPane" prefHeight="430.0" prefWidth="445.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SnakeFxController">
+<AnchorPane id="mainAnchorPane" fx:id="mainAnchorPane" prefHeight="430.0" prefWidth="419.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SnakeFxController">
    <children>
-      <Button id="btnNewGame" fx:id="btnNewGame" layoutX="78.0" layoutY="195.0" mnemonicParsing="false" onAction="#btnNewGame" text="New game" />
-      <TextArea id="textArea" fx:id="textArea" layoutX="209.0" layoutY="108.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button id="btnNewGame" fx:id="btnNewGame" layoutX="65.0" layoutY="161.0" mnemonicParsing="false" onAction="#btnNewGame" text="New game" />
+      <TextArea id="textArea" fx:id="textArea" editable="false" layoutX="210.0" layoutY="108.0" prefHeight="200.0" prefWidth="192.0" />
+      <Button id="resetTextArea" fx:id="resetTextArea" layoutX="245.0" layoutY="315.0" mnemonicParsing="false" onAction="#btnReset" text="Reset" />
+      <Button id="refreshTextArea" fx:id="refreshTextArea" layoutX="306.0" layoutY="315.0" mnemonicParsing="false" onAction="#btnRefresh" text="Refresh" />
+      <Button id="btnQuit" fx:id="btnQuit" layoutX="82.0" layoutY="202.0" mnemonicParsing="false" onAction="#btnQuit" text="Quit" />
    </children>
 </AnchorPane>
